<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/include"
        layout="@layout/top_tool_bar_layout" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:cropToPadding="false"
                android:focusable="true"
                android:src="@drawable/person_icon"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/transparentAsh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBarProfilePic"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image"
                tools:visibility="visible" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etNic"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/nic"
                        android:nextFocusForward="@id/etEmail"
                        android:inputType="text"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etBirthDate"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/date_of_birth"
                        android:inputType="none"
                        android:importantForAutofill="no"
                        android:focusable="false"
                        tools:ignore="TextFields" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etAccountNumber"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:hint="@string/accNumber"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etCity"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etDistrict"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/district"
                        android:inputType="text"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etProvince"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/province"
                        android:inputType="text"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etCountry"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:textSize="14sp"
                        android:hint="@string/country"
                        android:inputType="text"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="20dp"
                        android:layout_height="match_parent"
                        android:text="@string/gender"/>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/maleButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"/>
                        <RadioButton
                            android:id="@+id/femaleButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"/>
                    </RadioGroup>
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnSave"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:background="#FFFFFF"
                    android:text="@string/save"
                    app:cardBackgroundColor="@color/appGreen"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/textView57"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progressIndicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
